fix: alters the controller order
